[gd_scene load_steps=18 format=4 uid="uid://hcno64ekhqbr"]

[ext_resource type="PackedScene" uid="uid://cj4ohda1vcap8" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="FontFile" uid="uid://dy0h01gg66of2" path="res://assets/fonts/PixelOperator8.ttf" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://owq1h7h6fucg" path="res://assets/sprites/world_tileset.png" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://buya2j324fbnx" path="res://scenes/coin.tscn" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://e77g8gbq1hs2" path="res://scripts/game_manager.gd" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bw3s42hhkdc3t" path="res://scenes/grass_platform.tscn" id="5_pa8r4"]
[ext_resource type="PackedScene" uid="uid://qnct5ku8lk2u" path="res://scenes/slime.tscn" id="6_15mv3"]
[ext_resource type="PackedScene" uid="uid://c554ebj8r7c3r" path="res://scenes/killzone.tscn" id="6_p57ef"]
[ext_resource type="Texture2D" uid="uid://0x5qaqo3x5ur" path="res://assets/sprites/stopwatch.png" id="9_e3sih"]
[ext_resource type="Texture2D" uid="uid://dq8h1se4vjrcm" path="res://assets/sprites/coin_ui.png" id="10_2y5yt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lnu2h"]
texture = ExtResource("2_yqjtg")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.17985916, -8, 0.5395775)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.4749136, 8, 0.17985916, -8, 0.5395775)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.115196, 8, -6.4749136, 8, 0.17985916, -8, 0.5395775)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.4749136, 8, 0.17985916, -8, 0.5395775)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.115196, 8, -6.4749136, 8, 0.17985916, -8, 0.5395775)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.17985916, -8, 0.5395775)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.4749136, 8, 0.17985916, -8, 0.5395775)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.115196, 8, -6.4749136, 8, 0.17985916, -8, 0.5395775)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0.17985916, -8, 0.5395775)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_lbhrr"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lnu2h")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u5sy4"]
distance = -58.0

[sub_resource type="GDScript" id="GDScript_p57ef"]

[sub_resource type="Animation" id="Animation_15mv3"]
resource_name = "new_animation"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(310, -207), Vector2(310, -302)]
}

[sub_resource type="Animation" id="Animation_e3sih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(310, -207)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2y5yt"]
_data = {
&"RESET": SubResource("Animation_e3sih"),
&"new_animation": SubResource("Animation_15mv3")
}

[node name="Game" type="Node2D"]

[node name="Level 1" type="Node" parent="."]

[node name="GameManager" type="Node" parent="Level 1"]
unique_name_in_owner = true
script = ExtResource("4_lbhrr")

[node name="Timer" type="Timer" parent="Level 1/GameManager"]
wait_time = 20.0
one_shot = true
autostart = true

[node name="Map" type="Node" parent="Level 1"]

[node name="Foreground" type="TileMapLayer" parent="Level 1/Map"]
position = Vector2(-20, 16)
tile_map_data = PackedByteArray("AAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAIAAAAAAAJAAAAAAAJAAAAAAAKAAAAAAAKAAAAAAALAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAD+////AAAAAAUAAAD+//7/AAAAAAQAAAD+//3/AAAAAAQAAAD+//z/AAAAAAMAAAAgAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAlAAAAAAAAAAAAAADv/wEAAAAEAAkAAADw/wEAAAAEAAkAAADx/wEAAAAEAAkAAADy/wEAAAAEAAkAAADz/wEAAAAEAAkAAAD0/wEAAAAEAAkAAAD1/wEAAAAEAAkAAAD2/wEAAAAEAAkAAAD3/wEAAAAEAAkAAAD4/wEAAAAEAAkAAAD5/wEAAAAEAAkAAAD6/wEAAAAEAAkAAAD7/wEAAAAEAAkAAADv/wIAAAAEAAoAAADv/wMAAAAEAAoAAADv/wQAAAAEAAoAAADv/wUAAAAEAAoAAADv/wYAAAAEAAoAAADv/wcAAAAEAAoAAADv/wgAAAAEAAoAAADv/wkAAAAEAAoAAADv/woAAAAEAAoAAADw/wIAAAAEAAoAAADw/wMAAAAEAAoAAADw/wQAAAAEAAoAAADw/wUAAAAEAAoAAADw/wYAAAAEAAoAAADw/wcAAAAEAAoAAADw/wgAAAAEAAoAAADw/wkAAAAEAAoAAADw/woAAAAEAAoAAADx/wIAAAAEAAoAAADx/wMAAAAEAAoAAADx/wQAAAAEAAoAAADx/wUAAAAEAAoAAADx/wYAAAAEAAoAAADx/wcAAAAEAAoAAADx/wgAAAAEAAoAAADx/wkAAAAEAAoAAADx/woAAAAEAAoAAADy/wIAAAAEAAoAAADy/wMAAAAEAAoAAADy/wQAAAAEAAoAAADy/wUAAAAEAAoAAADy/wYAAAAEAAoAAADy/wcAAAAEAAoAAADy/wgAAAAEAAoAAADy/wkAAAAEAAoAAADy/woAAAAEAAoAAADz/wIAAAAEAAoAAADz/wMAAAAEAAoAAADz/wQAAAAEAAoAAADz/wUAAAAEAAoAAADz/wYAAAAEAAoAAADz/wcAAAAEAAoAAADz/wgAAAAEAAoAAADz/wkAAAAEAAoAAADz/woAAAAEAAoAAAD0/wIAAAAEAAoAAAD0/wMAAAAEAAoAAAD0/wQAAAAEAAoAAAD0/wUAAAAEAAoAAAD0/wYAAAAEAAoAAAD0/wcAAAAEAAoAAAD0/wgAAAAEAAoAAAD0/wkAAAAEAAoAAAD0/woAAAAEAAoAAAD1/wIAAAAEAAoAAAD1/wMAAAAEAAoAAAD1/wQAAAAEAAoAAAD1/wUAAAAEAAoAAAD1/wYAAAAEAAoAAAD1/wcAAAAEAAoAAAD1/wgAAAAEAAoAAAD1/wkAAAAEAAoAAAD1/woAAAAEAAoAAAD2/wIAAAAEAAoAAAD2/wMAAAAEAAoAAAD2/wQAAAAEAAoAAAD2/wUAAAAEAAoAAAD2/wYAAAAEAAoAAAD2/wcAAAAEAAoAAAD2/wgAAAAEAAoAAAD2/wkAAAAEAAoAAAD2/woAAAAEAAoAAAD3/wIAAAAEAAoAAAD3/wMAAAAEAAoAAAD3/wQAAAAEAAoAAAD3/wUAAAAEAAoAAAD3/wYAAAAEAAoAAAD3/wcAAAAEAAoAAAD3/wgAAAAEAAoAAAD3/wkAAAAEAAoAAAD3/woAAAAEAAoAAAD4/wIAAAAEAAoAAAD4/wMAAAAEAAoAAAD4/wQAAAAEAAoAAAD4/wUAAAAEAAoAAAD4/wYAAAAEAAoAAAD4/wcAAAAEAAoAAAD4/wgAAAAEAAoAAAD4/wkAAAAEAAoAAAD4/woAAAAEAAoAAAD5/wIAAAAEAAoAAAD5/wMAAAAEAAoAAAD5/wQAAAAEAAoAAAD5/wUAAAAEAAoAAAD5/wYAAAAEAAoAAAD5/wcAAAAEAAoAAAD5/wgAAAAEAAoAAAD5/wkAAAAEAAoAAAD5/woAAAAEAAoAAAD6/wIAAAAEAAoAAAD6/wMAAAAEAAoAAAD6/wQAAAAEAAoAAAD6/wUAAAAEAAoAAAD6/wYAAAAEAAoAAAD6/wcAAAAEAAoAAAD6/wgAAAAEAAoAAAD6/wkAAAAEAAoAAAD6/woAAAAEAAoAAAD7/wIAAAAEAAoAAAD7/wMAAAAEAAoAAAD7/wQAAAAEAAoAAAD7/wUAAAAEAAoAAAD7/wYAAAAEAAoAAAD7/wcAAAAEAAoAAAD7/wgAAAAEAAoAAAD7/wkAAAAEAAoAAAD7/woAAAAEAAoAAAAIAAEAAAAEAAkAAAAJAAEAAAAEAAkAAAAKAAEAAAAEAAkAAAAIAAIAAAAEAAoAAAAIAAMAAAAEAAoAAAAIAAQAAAAEAAoAAAAIAAUAAAAEAAoAAAAIAAYAAAAEAAoAAAAIAAcAAAAEAAoAAAAIAAgAAAAEAAoAAAAIAAkAAAAEAAoAAAAIAAoAAAAEAAoAAAAJAAIAAAAEAAoAAAAJAAMAAAAEAAoAAAAJAAQAAAAEAAoAAAAJAAUAAAAEAAoAAAAJAAYAAAAEAAoAAAAJAAcAAAAEAAoAAAAJAAgAAAAEAAoAAAAJAAkAAAAEAAoAAAAJAAoAAAAEAAoAAAAKAAIAAAAEAAoAAAAKAAMAAAAEAAoAAAAKAAQAAAAEAAoAAAAKAAUAAAAEAAoAAAAKAAYAAAAEAAoAAAAKAAcAAAAEAAoAAAAKAAgAAAAEAAoAAAAKAAkAAAAEAAoAAAAKAAoAAAAEAAoAAAD8/wEAAAAAAAEAAAD8/wIAAAAAAAEAAAD8/wMAAAAAAAEAAAD8/wQAAAAAAAEAAAD8/wUAAAAAAAEAAAD8/wYAAAAAAAEAAAD8/wcAAAAAAAEAAAD8/wgAAAAAAAEAAAD8/wkAAAAAAAEAAAD8/woAAAAAAAEAAAD9/wEAAAAAAAEAAAD9/wIAAAAAAAEAAAD9/wMAAAAAAAEAAAD9/wQAAAAAAAEAAAD9/wUAAAAAAAEAAAD9/wYAAAAAAAEAAAD9/wcAAAAAAAEAAAD9/wgAAAAAAAEAAAD9/wkAAAAAAAEAAAD9/woAAAAAAAEAAAD+/wEAAAAAAAEAAAD+/wIAAAAAAAEAAAD+/wMAAAAAAAEAAAD+/wQAAAAAAAEAAAD+/wUAAAAAAAEAAAD+/wYAAAAAAAEAAAD+/wcAAAAAAAEAAAD+/wgAAAAAAAEAAAD+/wkAAAAAAAEAAAD+/woAAAAAAAEAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAD//wkAAAAAAAEAAAD//woAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAoAAAAAAAEAAAABAAEAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAEAAAABAAgAAAAAAAEAAAABAAkAAAAAAAEAAAABAAoAAAAAAAEAAAACAAEAAAAAAAEAAAACAAIAAAAAAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAACAAYAAAAAAAEAAAACAAcAAAAAAAEAAAACAAgAAAAAAAEAAAACAAkAAAAAAAEAAAACAAoAAAAAAAEAAAADAAEAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAADAAYAAAAAAAEAAAADAAcAAAAAAAEAAAADAAgAAAAAAAEAAAADAAkAAAAAAAEAAAADAAoAAAAAAAEAAAAEAAEAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAEAAAAEAAgAAAAAAAEAAAAEAAkAAAAAAAEAAAAEAAoAAAAAAAEAAAAFAAEAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAFAAgAAAAAAAEAAAAFAAkAAAAAAAEAAAAFAAoAAAAAAAEAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAEAAAAGAAcAAAAAAAEAAAAGAAgAAAAAAAEAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAEAAAAHAAEAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAEAAAAHAAgAAAAAAAEAAAAHAAkAAAAAAAEAAAAHAAoAAAAAAAEAAAALAAEAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAALAAYAAAAAAAEAAAALAAcAAAAAAAEAAAALAAgAAAAAAAEAAAALAAkAAAAAAAEAAAALAAoAAAAAAAEAAAAMAAEAAAAAAAEAAAAMAAIAAAAAAAEAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAAMAAYAAAAAAAEAAAAMAAcAAAAAAAEAAAAMAAgAAAAAAAEAAAAMAAkAAAAAAAEAAAAMAAoAAAAAAAEAAAANAAEAAAAAAAEAAAANAAIAAAAAAAEAAAANAAMAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAANAAYAAAAAAAEAAAANAAcAAAAAAAEAAAANAAgAAAAAAAEAAAANAAkAAAAAAAEAAAANAAoAAAAAAAEAAAAOAAEAAAAAAAEAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAEAAAAOAAgAAAAAAAEAAAAOAAkAAAAAAAEAAAAOAAoAAAAAAAEAAAAPAAEAAAAAAAEAAAAPAAIAAAAAAAEAAAAPAAMAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAYAAAAAAAEAAAAPAAcAAAAAAAEAAAAPAAgAAAAAAAEAAAAPAAkAAAAAAAEAAAAPAAoAAAAAAAEAAAAQAAEAAAAAAAEAAAAQAAIAAAAAAAEAAAAQAAMAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAAQAAYAAAAAAAEAAAAQAAcAAAAAAAEAAAAQAAgAAAAAAAEAAAAQAAkAAAAAAAEAAAAQAAoAAAAAAAEAAAAUAAEAAAAAAAEAAAAUAAIAAAAAAAEAAAAUAAMAAAAAAAEAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAEAAAAUAAYAAAAAAAEAAAAUAAcAAAAAAAEAAAAUAAgAAAAAAAEAAAAUAAkAAAAAAAEAAAAUAAoAAAAAAAEAAAAVAAEAAAAAAAEAAAAVAAIAAAAAAAEAAAAVAAMAAAAAAAEAAAAVAAQAAAAAAAEAAAAVAAUAAAAAAAEAAAAVAAYAAAAAAAEAAAAVAAcAAAAAAAEAAAAVAAgAAAAAAAEAAAAVAAkAAAAAAAEAAAAVAAoAAAAAAAEAAAAWAAEAAAAAAAEAAAAWAAIAAAAAAAEAAAAWAAMAAAAAAAEAAAAWAAQAAAAAAAEAAAAWAAUAAAAAAAEAAAAWAAYAAAAAAAEAAAAWAAcAAAAAAAEAAAAWAAgAAAAAAAEAAAAWAAkAAAAAAAEAAAAWAAoAAAAAAAEAAAAXAAEAAAAAAAEAAAAXAAIAAAAAAAEAAAAXAAMAAAAAAAEAAAAXAAQAAAAAAAEAAAAXAAUAAAAAAAEAAAAXAAYAAAAAAAEAAAAXAAcAAAAAAAEAAAAXAAgAAAAAAAEAAAAXAAkAAAAAAAEAAAAXAAoAAAAAAAEAAAAYAAEAAAAAAAEAAAAYAAIAAAAAAAEAAAAYAAMAAAAAAAEAAAAYAAQAAAAAAAEAAAAYAAUAAAAAAAEAAAAYAAYAAAAAAAEAAAAYAAcAAAAAAAEAAAAYAAgAAAAAAAEAAAAYAAkAAAAAAAEAAAAYAAoAAAAAAAEAAAAZAAEAAAAAAAEAAAAZAAIAAAAAAAEAAAAZAAMAAAAAAAEAAAAZAAQAAAAAAAEAAAAZAAUAAAAAAAEAAAAZAAYAAAAAAAEAAAAZAAcAAAAAAAEAAAAZAAgAAAAAAAEAAAAZAAkAAAAAAAEAAAAZAAoAAAAAAAEAAAAgAAEAAAAAAAEAAAAgAAIAAAAAAAEAAAAgAAMAAAAAAAEAAAAgAAQAAAAAAAEAAAAgAAUAAAAAAAEAAAAgAAYAAAAAAAEAAAAgAAcAAAAAAAEAAAAgAAgAAAAAAAEAAAAgAAkAAAAAAAEAAAAgAAoAAAAAAAEAAAAhAAEAAAAAAAEAAAAhAAIAAAAAAAEAAAAhAAMAAAAAAAEAAAAhAAQAAAAAAAEAAAAhAAUAAAAAAAEAAAAhAAYAAAAAAAEAAAAhAAcAAAAAAAEAAAAhAAgAAAAAAAEAAAAhAAkAAAAAAAEAAAAhAAoAAAAAAAEAAAAiAAEAAAAAAAEAAAAiAAIAAAAAAAEAAAAiAAMAAAAAAAEAAAAiAAQAAAAAAAEAAAAiAAUAAAAAAAEAAAAiAAYAAAAAAAEAAAAiAAcAAAAAAAEAAAAiAAgAAAAAAAEAAAAiAAkAAAAAAAEAAAAiAAoAAAAAAAEAAAAjAAEAAAAAAAEAAAAjAAIAAAAAAAEAAAAjAAMAAAAAAAEAAAAjAAQAAAAAAAEAAAAjAAUAAAAAAAEAAAAjAAYAAAAAAAEAAAAjAAcAAAAAAAEAAAAjAAgAAAAAAAEAAAAjAAkAAAAAAAEAAAAjAAoAAAAAAAEAAAAkAAEAAAAAAAEAAAAkAAIAAAAAAAEAAAAkAAMAAAAAAAEAAAAkAAQAAAAAAAEAAAAkAAUAAAAAAAEAAAAkAAYAAAAAAAEAAAAkAAcAAAAAAAEAAAAkAAgAAAAAAAEAAAAkAAkAAAAAAAEAAAAkAAoAAAAAAAEAAAAlAAEAAAAAAAEAAAAlAAIAAAAAAAEAAAAlAAMAAAAAAAEAAAAlAAQAAAAAAAEAAAAlAAUAAAAAAAEAAAAlAAYAAAAAAAEAAAAlAAcAAAAAAAEAAAAlAAgAAAAAAAEAAAAlAAkAAAAAAAEAAAAlAAoAAAAAAAEAAAARAAEAAAAEAAkAAAASAAEAAAAEAAkAAAATAAEAAAAEAAkAAAAaAAEAAAAEAAkAAAAbAAEAAAAEAAkAAAAcAAEAAAAEAAkAAAAdAAEAAAAEAAkAAAAeAAEAAAAEAAkAAAAfAAEAAAAEAAkAAAARAAIAAAAEAAoAAAARAAMAAAAEAAoAAAARAAQAAAAEAAoAAAARAAUAAAAEAAoAAAARAAYAAAAEAAoAAAARAAcAAAAEAAoAAAARAAgAAAAEAAoAAAARAAkAAAAEAAoAAAARAAoAAAAEAAoAAAASAAIAAAAEAAoAAAASAAMAAAAEAAoAAAASAAQAAAAEAAoAAAASAAUAAAAEAAoAAAASAAYAAAAEAAoAAAASAAcAAAAEAAoAAAASAAgAAAAEAAoAAAASAAkAAAAEAAoAAAASAAoAAAAEAAoAAAATAAIAAAAEAAoAAAATAAMAAAAEAAoAAAATAAQAAAAEAAoAAAATAAUAAAAEAAoAAAATAAYAAAAEAAoAAAATAAcAAAAEAAoAAAATAAgAAAAEAAoAAAATAAkAAAAEAAoAAAATAAoAAAAEAAoAAAAaAAIAAAAEAAoAAAAaAAMAAAAEAAoAAAAaAAQAAAAEAAoAAAAaAAUAAAAEAAoAAAAaAAYAAAAEAAoAAAAaAAcAAAAEAAoAAAAaAAgAAAAEAAoAAAAaAAkAAAAEAAoAAAAaAAoAAAAEAAoAAAAbAAIAAAAEAAoAAAAbAAMAAAAEAAoAAAAbAAQAAAAEAAoAAAAbAAUAAAAEAAoAAAAbAAYAAAAEAAoAAAAbAAcAAAAEAAoAAAAbAAgAAAAEAAoAAAAbAAkAAAAEAAoAAAAbAAoAAAAEAAoAAAAcAAIAAAAEAAoAAAAcAAMAAAAEAAoAAAAcAAQAAAAEAAoAAAAcAAUAAAAEAAoAAAAcAAYAAAAEAAoAAAAcAAcAAAAEAAoAAAAcAAgAAAAEAAoAAAAcAAkAAAAEAAoAAAAcAAoAAAAEAAoAAAAdAAIAAAAEAAoAAAAdAAMAAAAEAAoAAAAdAAQAAAAEAAoAAAAdAAUAAAAEAAoAAAAdAAYAAAAEAAoAAAAdAAcAAAAEAAoAAAAdAAgAAAAEAAoAAAAdAAkAAAAEAAoAAAAdAAoAAAAEAAoAAAAeAAIAAAAEAAoAAAAeAAMAAAAEAAoAAAAeAAQAAAAEAAoAAAAeAAUAAAAEAAoAAAAeAAYAAAAEAAoAAAAeAAcAAAAEAAoAAAAeAAgAAAAEAAoAAAAeAAkAAAAEAAoAAAAeAAoAAAAEAAoAAAAfAAIAAAAEAAoAAAAfAAMAAAAEAAoAAAAfAAQAAAAEAAoAAAAfAAUAAAAEAAoAAAAfAAYAAAAEAAoAAAAfAAcAAAAEAAoAAAAfAAgAAAAEAAoAAAAfAAkAAAAEAAoAAAAfAAoAAAAEAAoAAAAmAAEAAAAEAAkAAAAnAAEAAAAEAAkAAAAoAAEAAAAEAAkAAAApAAEAAAAEAAkAAAAqAAEAAAAEAAkAAAArAAEAAAAEAAkAAAAsAAEAAAAEAAkAAAAtAAEAAAAEAAkAAAAuAAEAAAAEAAkAAAAvAAEAAAAEAAkAAAAmAAIAAAAEAAoAAAAmAAMAAAAEAAoAAAAmAAQAAAAEAAoAAAAmAAUAAAAEAAoAAAAmAAYAAAAEAAoAAAAmAAcAAAAEAAoAAAAmAAgAAAAEAAoAAAAmAAkAAAAEAAoAAAAmAAoAAAAEAAoAAAAnAAIAAAAEAAoAAAAnAAMAAAAEAAoAAAAnAAQAAAAEAAoAAAAnAAUAAAAEAAoAAAAnAAYAAAAEAAoAAAAnAAcAAAAEAAoAAAAnAAgAAAAEAAoAAAAnAAkAAAAEAAoAAAAnAAoAAAAEAAoAAAAoAAIAAAAEAAoAAAAoAAMAAAAEAAoAAAAoAAQAAAAEAAoAAAAoAAUAAAAEAAoAAAAoAAYAAAAEAAoAAAAoAAcAAAAEAAoAAAAoAAgAAAAEAAoAAAAoAAkAAAAEAAoAAAAoAAoAAAAEAAoAAAApAAIAAAAEAAoAAAApAAMAAAAEAAoAAAApAAQAAAAEAAoAAAApAAUAAAAEAAoAAAApAAYAAAAEAAoAAAApAAcAAAAEAAoAAAApAAgAAAAEAAoAAAApAAkAAAAEAAoAAAApAAoAAAAEAAoAAAAqAAIAAAAEAAoAAAAqAAMAAAAEAAoAAAAqAAQAAAAEAAoAAAAqAAUAAAAEAAoAAAAqAAYAAAAEAAoAAAAqAAcAAAAEAAoAAAAqAAgAAAAEAAoAAAAqAAkAAAAEAAoAAAAqAAoAAAAEAAoAAAArAAIAAAAEAAoAAAArAAMAAAAEAAoAAAArAAQAAAAEAAoAAAArAAUAAAAEAAoAAAArAAYAAAAEAAoAAAArAAcAAAAEAAoAAAArAAgAAAAEAAoAAAArAAkAAAAEAAoAAAArAAoAAAAEAAoAAAAsAAIAAAAEAAoAAAAsAAMAAAAEAAoAAAAsAAQAAAAEAAoAAAAsAAUAAAAEAAoAAAAsAAYAAAAEAAoAAAAsAAcAAAAEAAoAAAAsAAgAAAAEAAoAAAAsAAkAAAAEAAoAAAAsAAoAAAAEAAoAAAAtAAIAAAAEAAoAAAAtAAMAAAAEAAoAAAAtAAQAAAAEAAoAAAAtAAUAAAAEAAoAAAAtAAYAAAAEAAoAAAAtAAcAAAAEAAoAAAAtAAgAAAAEAAoAAAAtAAkAAAAEAAoAAAAtAAoAAAAEAAoAAAAuAAIAAAAEAAoAAAAuAAMAAAAEAAoAAAAuAAQAAAAEAAoAAAAuAAUAAAAEAAoAAAAuAAYAAAAEAAoAAAAuAAcAAAAEAAoAAAAuAAgAAAAEAAoAAAAuAAkAAAAEAAoAAAAuAAoAAAAEAAoAAAAvAAIAAAAEAAoAAAAvAAMAAAAEAAoAAAAvAAQAAAAEAAoAAAAvAAUAAAAEAAoAAAAvAAYAAAAEAAoAAAAvAAcAAAAEAAoAAAAvAAgAAAAEAAoAAAAvAAkAAAAEAAoAAAAvAAoAAAAEAAoAAAD/////AAAIAAUAAAAkAP//AAABAAUAAAAlAP//AAABAAUAAAAgAP//AAAAAAUAAAAgAP7/AAAAAAMAAAAHAP//AAAHAAUAAAAGAP//AAAIAAUAAAAKAPj/AAAAAAEAAAALAPj/AAAAAAEAAAAMAPj/AAAAAAEAAAANAPj/AAAAAAEAAAAOAPj/AAAAAAEAAAAPAPj/AAAAAAEAAAAQAPj/AAAAAAEAAAARAPj/AAAAAAEAAAASAPj/AAAAAAEAAAAJAPj/AAAAAAEAAAARAPf/AAABAAEAAAASAPf/AAAAAAEAAAASAPb/AAAAAAAAAAAIAPb/AAAAAAEAAAAIAPf/AAAAAAEAAAAIAPj/AAAAAAEAAAAIAPX/AAAAAAAAAAAOAPf/AAAIAAgAAAAKAPf/AAAGAAUAAAAKAPb/AAAGAAQAAAAKAPX/AAAGAAMAAAAHAPb/AAAAAAAAAAAHAPf/AAABAAEAAAAHAPj/AAABAAEAAAAPAPP/AAAAAAAAAAAOAPP/AAAAAAAAAAAQAPP/AAAAAAAAAAARAPP/AAAAAAAAAAAYAPP/AAAAAAAAAAAZAPP/AAAAAAAAAAAaAPP/AAAAAAAAAAAbAPP/AAAAAAAAAAAPAPL/AAAHAAUAAAAaAPL/AAAIAAUAAAARAPL/AAAIAAQAAAAYAPL/AAAIAAQAAAAXAOz/AAAAAAAAAAAYAOz/AAAAAAAAAAAZAOz/AAAAAAAAAAAaAOz/AAAAAAAAAAAbAOz/AAAAAAAAAAAcAOz/AAAAAAAAAAAdAOz/AAAAAAAAAAAXAOr/AAADAAcAAAAXAOv/AAADAAcAAAAdAOr/AAADAAcAAAAdAOv/AAADAAgAAAAXAOj/AAACAAQAAAAdAOj/AAACAAQAAAAYAOv/AAAHAAUAAAAcAOv/AAAHAAUAAAAZAOv/AAAIAAUAAAAbAOv/AAAIAAUAAAAQAP7/AAADAAcAAAAQAP//AAADAAgAAAAQAPz/AAACAAQAAAA=")
tile_set = SubResource("TileSet_lbhrr")

[node name="coins" type="Node" parent="Level 1/Map"]

[node name="coin" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(32, 8)

[node name="coin2" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(47, 8)

[node name="coin3" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(62, 8)

[node name="coin4" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(333, 8)

[node name="coin5" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(348, 8)

[node name="coin6" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(364, 8)

[node name="coin7" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(188, 8)

[node name="coin8" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(204, 8)

[node name="coin9" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(219, 8)

[node name="coin10" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(539, -22)

[node name="coin11" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(539, -66)

[node name="coin12" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(539, -111)

[node name="coin13" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(443, -110)

[node name="coin14" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(342, -110)

[node name="coin15" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(242, -119)

[node name="coin16" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(132, -119)

[node name="coin17" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(225, -119)

[node name="coin18" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(148, -119)

[node name="coin19" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(308, -235)

[node name="coin20" parent="Level 1/Map/coins" instance=ExtResource("3_lnu2h")]
position = Vector2(403, -314)

[node name="Killzones" type="Node" parent="Level 1/Map"]

[node name="Killzone" parent="Level 1/Map/Killzones" instance=ExtResource("6_p57ef")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Map/Killzones/Killzone"]
shape = SubResource("WorldBoundaryShape2D_u5sy4")

[node name="fixed_platforms" type="Node" parent="Level 1/Map"]

[node name="AnimatableBody2D" parent="Level 1/Map/fixed_platforms" instance=ExtResource("5_pa8r4")]
position = Vector2(540, -11)

[node name="AnimatableBody2D2" parent="Level 1/Map/fixed_platforms" instance=ExtResource("5_pa8r4")]
position = Vector2(540, -54)

[node name="AnimatableBody2D3" parent="Level 1/Map/fixed_platforms" instance=ExtResource("5_pa8r4")]
position = Vector2(539, -99)

[node name="AnimatableBody2D4" parent="Level 1/Map/fixed_platforms" instance=ExtResource("5_pa8r4")]
position = Vector2(443, -99)

[node name="AnimatableBody2D5" parent="Level 1/Map/fixed_platforms" instance=ExtResource("5_pa8r4")]
position = Vector2(343, -99)

[node name="enemies" type="Node" parent="Level 1/Map"]

[node name="slime" parent="Level 1/Map/enemies" instance=ExtResource("6_15mv3")]
position = Vector2(243, -112)

[node name="Player" parent="Level 1" instance=ExtResource("1_uwrxv")]
z_index = 3
position = Vector2(-70, -7)

[node name="PlayerCamera" type="Camera2D" parent="Level 1/Player"]
position = Vector2(-1, 0)
zoom = Vector2(3, 3)
limit_bottom = 130
script = SubResource("GDScript_p57ef")

[node name="UI" type="CanvasLayer" parent="Level 1"]

[node name="CoinUi" type="Sprite2D" parent="Level 1/UI"]
position = Vector2(1030, 19)
scale = Vector2(2.375, 2.375)
texture = ExtResource("10_2y5yt")

[node name="ScoreLabel" type="Label" parent="Level 1/UI"]
offset_left = 1049.0
offset_top = 7.0
offset_right = 1127.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Stopwatch" type="Sprite2D" parent="Level 1/UI"]
position = Vector2(1031, 54)
texture = ExtResource("9_e3sih")

[node name="TimeLabel" type="Label" parent="Level 1/UI"]
offset_left = 1047.0
offset_top = 45.0
offset_right = 1145.0
offset_bottom = 96.0
theme_override_fonts/font = ExtResource("2_iywne")
theme_override_font_sizes/font_size = 24
metadata/_edit_use_anchors_ = true

[node name="moving_platforms" type="Node" parent="."]

[node name="AnimatableBody2D" parent="moving_platforms" instance=ExtResource("5_pa8r4")]
position = Vector2(310, -207)

[node name="AnimationPlayer" type="AnimationPlayer" parent="moving_platforms/AnimatableBody2D"]
libraries = {
&"": SubResource("AnimationLibrary_2y5yt")
}
autoplay = "new_animation"

[connection signal="ready" from="Level 1/GameManager/Timer" to="Level 1/GameManager" method="_on_timer_ready"]
[connection signal="timeout" from="Level 1/GameManager/Timer" to="Level 1/GameManager" method="_on_timer_timeout"]
